--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
+
 body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  width: 100%;
+  background: #f3ccd3;
+  font-family: 'Nunito Sans', sans-serif;
 }
