--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,4 +1,4 @@
-.main-container {
+.title-container {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
@@ -10,9 +10,13 @@
   padding-right: 20px;
 }
 
+.show-list {
+  font-size: 5rem;
+}
+
 .right {
   flex: 1;
-  padding-left: 20px;
+  /* padding-left: 20px; */
 }
 
 select {
