--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -30,10 +30,11 @@ select {
   width: 23%;
   padding: 10px;
   margin-bottom: 20px;
-  font-size: 0.8rem;
+  font-size: 1rem;
   border: 3px solid black;
   border-radius: 5px;
   outline: none;
+  font-weight: bold;
 }
 
 .card-list {
