--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  color: #ffffff;
+  color: #fff;
 }
 
 .left-title {
@@ -48,18 +48,18 @@ select {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #ffffff;
+  color: #fff;
   box-shadow: 2px 2px black;
   padding-bottom: 0.5rem;
   max-height: 75vh;
 }
 
 .movie-card:nth-child(odd) {
-  background-color: rgba(59,130,245,.5);
+  background-color: rgba(59, 130, 245, 0.5);
 }
 
 .movie-card:nth-child(even) {
-  background-color: rgba(59,130,246,.5);
+  background-color: rgba(59, 130, 246, 0.5);
 }
 
 .right-arrow {
