--- a/src/styles/details.css
+++ b/src/styles/details.css
@@ -10,7 +10,8 @@
 .left-arrow {
   display: flex;
   justify-content: space-between;
-  max-width: 9%;
+  margin-left: auto;
+  width: 8.5%;
   font-size: 1.7rem;
   color: #fff;
   text-decoration: none;
@@ -77,4 +78,42 @@ img {
 
 .official-site a {
   color: inherit;
+}
+
+@media screen and (max-width: 768px) {
+  html,
+  body {
+    height: 100%;
+  }
+
+  .left-arrow {
+    width: 25%;
+    font-size: 0.8rem;
+  }
+
+  .details-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .details-content {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .left-column h2 {
+    font-size: 1.7rem;
+    font-weight: 800;
+    margin-bottom: 1rem;
+  }
+
+  img {
+    height: 85%;
+  }
+
+  .rating {
+    margin-top: 1rem;
+  }
 }
