--- a/src/styles/details.css
+++ b/src/styles/details.css
@@ -8,19 +8,21 @@
 }
 
 .left-arrow {
-  display: flex;
-  justify-content: space-between;
   margin-left: auto;
   width: 8.5%;
   font-size: 1.7rem;
   color: #fff;
   text-decoration: none;
   font-weight: bold;
-  padding: 0.7rem 1.5rem;
-  border-radius: 1.3rem;
+  padding: 8px 12px;
+  border-radius: 1rem;
   box-shadow: 1px 4px 4px rgba(59, 130, 245, 0.16);
   background-color: rgba(59, 130, 245, 0.5);
   cursor: pointer;
+}
+
+.back-icon {
+  margin-right: 5px;
 }
 
 .details-content {
@@ -28,7 +30,7 @@
   background-color: #4369b2;
   border-radius: 1.3rem;
   padding: 1rem 1.3rem;
-  height: 70vh;
+  height: auto;
 }
 
 .left-column {
@@ -115,5 +117,13 @@ img {
 
   .rating {
     margin-top: 1rem;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .details-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
   }
 }
